src/components/Post.scss
.Post {
	flex-direction: column;
	position: relative;
	padding-bottom: 20px;
	min-height: 144px;
	&:before {
		position: absolute;
		content: '';
		left: 32px;
		top: 70px;
	    height:40px;
	    width: 40px;
	    border-radius: 0 0 0 40px;
		border-left: 5px solid #F1F2EE;
		border-bottom: 5px solid #F1F2EE;
	}
	&:after {
		position: absolute;
		content: '';
		left: 32px;
		bottom: 0px;
	    height:40px;
	    width: 40px;
	    border-radius: 40px 0 0 0;
		border-top: 5px solid #F1F2EE;
		border-left: 5px solid #F1F2EE;
	}
	> header {
		// Stick on scroll.
		position: sticky;
		top: 0;

		// Force appearing above comments.
		z-index: 1;

		// Adjust sizing.
		margin-top: -15px;
		padding: 15px 0;
		background: #fff;
		display: flex;
		> .Avatar {
			margin-right: 30px;
		}
		> div {
			flex-direction: column;
			> h2 {
				margin-bottom: 0;
			}
			> .date {
				color: #bbb;
				font-size: 11.5px;
			}
		}
	}
	> .PostContent {
		margin-left: 100px;
	}

	.CommentsList {
		margin-left: 75px;
	}
}

